--- a/Server-Angular/index.html
+++ b/Server-Angular/index.html
@@ -6,12 +6,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
-  <title>Document</title>
+  <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/png">
+  <title>Bot RiveScript</title>
   <base href="/">
 </head>
 
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.js" type="module"></script><script src="polyfills-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule></script><script src="polyfills-es5.js" nomodule></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule></script><script src="vendor-es2015.js" type="module"></script><script src="main-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule></script><script src="main-es5.js" nomodule></script></body>
+ <script src="angularJS/runtime-es2015.js" type="module"></script>
+ <script src="angularJS/polyfills-es2015.js" type="module"></script>
+ <script src="angularJS/runtime-es5.js" nomodule></script>
+ <script src="angularJS/polyfills-es5.js" nomodule></script>
+ <script src="angularJS/styles-es2015.js" type="module"></script>
+ <script src="angularJS/styles-es5.js" nomodule></script>
+ <script src="angularJS/vendor-es2015.js" type="module"></script>
+ <script src="angularJS/main-es2015.js" type="module"></script>
+ <script src="angularJS/vendor-es5.js" nomodule></script>
+ <script src="angularJS/main-es5.js" nomodule></script>
+ 
+</body>
 
 </html>
